unpackaged/main/default/objects/SRLG_Automated_Comms_Settings__c/SRLG_Automated_Comms_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SRLG Automated Comms Settings</label>
</CustomObject>