unpackaged/main/default/objects/SRLG_Automated_Comms_Settings__c/fields/Default_Org_Wide_Email_From_Address__c.field-meta.xml
<CustomField>
    <fullName>Default_Org_Wide_Email_From_Address__c</fullName>
    <label>Default Org Wide Email From Address</label>
    <type>Email</type>
</CustomField>