unpackaged/main/default/objects/SRLG_Automated_Comms_Settings__c/fields/Intake_Team_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Intake_Team_Contact_Id__c</fullName>
    <description>Contact record with email address used to notify when an outbound comm record has recipient listed as Intake Team</description>
    <inlineHelpText>Contact record with email address used to notify when an outbound comm record has recipient listed as Intake Team</inlineHelpText>
    <label>Intake Team Contact Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>