unpackaged/main/default/objects/SRLG_Automated_Comms_Settings__c/fields/Sending_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Sending_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, then the drip engine is live.  When disabled, only users with testing permissions will trigger outbound communications</description>
    <inlineHelpText>When checked, then the drip engine is live.  When disabled, only users with testing permissions will trigger outbound communications</inlineHelpText>
    <label>Sending Enabled</label>
    <type>Checkbox</type>
</CustomField>