unpackaged/main/default/objects/SRLG_Automated_Comms_Settings__c/fields/X3P_CV_Days_Until_Expired__c.field-meta.xml
<CustomField>
    <fullName>X3P_CV_Days_Until_Expired__c</fullName>
    <description>Days from setting intake&#39;s status to Case Verification when the intake will be updated to CV Expired</description>
    <inlineHelpText>Days from setting intake&#39;s status to Case Verification when the intake will be updated to CV Expired</inlineHelpText>
    <label>3P CV Days Until Expired</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>